# finnish-names

./: Anna.htm  Main.hs  example-output.txt  finnish-names.cabal
