name:                finnish-names
version:             0.1.0.0
-- synopsis:            
description:         tagsoup HTML scraping example
-- license:             
license-file:        LICENSE
-- author:              
maintainer:          erantapaa@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable finnish-names
  main-is:             Main.hs
  other-modules:       TagSoup.Sample
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, tagsoup, split, transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
